src/main/java/com/example/parser/GramaticaParser.java
// Generated from Gramatica.g4 by ANTLR 4.7.2
package com.example.parser;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GramaticaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, FOR=9, 
		FLOTTEUR=10, ENTIER=11, ANNULER=12, PRINCIPALE=13, NUM=14, IMPRIMER=15, 
		PAR=16, DIVISE=17, SOMME=18, SOUSTRAIRE=19, PONTENTIEL=20, VRAI=21, FAUX=22, 
		AGE=23, MINEURE=24, PLUS=25, MOINS=26, DIFF=27, EGAL=28, ET=29, OU=30, 
		MAS=31, MENOS=32, ALLER=33, STRING=34, COM=35, IGNORE=36;
	public static final int
		RULE_calculatrice = 0, RULE_ouver = 1, RULE_numflotteur = 2, RULE_numentier = 3, 
		RULE_fermet = 4, RULE_tete = 5, RULE_declaration = 6, RULE_decla = 7, 
		RULE_asignation = 8, RULE_imprimer = 9, RULE_contenu = 10, RULE_conditionalIf = 11, 
		RULE_conditionalelse = 12, RULE_conditionalelseif = 13, RULE_condicionalfor = 14, 
		RULE_condition = 15, RULE_express = 16, RULE_incremento = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"calculatrice", "ouver", "numflotteur", "numentier", "fermet", "tete", 
			"declaration", "decla", "asignation", "imprimer", "contenu", "conditionalIf", 
			"conditionalelse", "conditionalelseif", "condicionalfor", "condition", 
			"express", "incremento"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "';'", "'}'", "'('", "')'", "'='", "'if'", "'else'", "'for'", 
			"'flotteur'", "'entier'", "'annuler'", "'principale'", null, "'imprimer'", 
			"'*'", "'/'", "'+'", "'-'", "'^'", "'true'", "'false'", "'>'", "'<'", 
			"'>='", "'<='", "'!='", "'=='", "'&&'", "'||'", "'++'", "'--'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "FOR", "FLOTTEUR", 
			"ENTIER", "ANNULER", "PRINCIPALE", "NUM", "IMPRIMER", "PAR", "DIVISE", 
			"SOMME", "SOUSTRAIRE", "PONTENTIEL", "VRAI", "FAUX", "AGE", "MINEURE", 
			"PLUS", "MOINS", "DIFF", "EGAL", "ET", "OU", "MAS", "MENOS", "ALLER", 
			"STRING", "COM", "IGNORE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Gramatica.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GramaticaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CalculatriceContext extends ParserRuleContext {
		public CalculatriceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_calculatrice; }
	 
		public CalculatriceContext() { }
		public void copyFrom(CalculatriceContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ContContext extends CalculatriceContext {
		public TeteContext tete() {
			return getRuleContext(TeteContext.class,0);
		}
		public OuverContext ouver() {
			return getRuleContext(OuverContext.class,0);
		}
		public ContenuContext contenu() {
			return getRuleContext(ContenuContext.class,0);
		}
		public FermetContext fermet() {
			return getRuleContext(FermetContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GramaticaParser.EOF, 0); }
		public ContContext(CalculatriceContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitCont(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CalculatriceContext calculatrice() throws RecognitionException {
		CalculatriceContext _localctx = new CalculatriceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_calculatrice);
		try {
			_localctx = new ContContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			tete();
			setState(37);
			ouver();
			setState(38);
			contenu();
			setState(39);
			fermet();
			setState(40);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OuverContext extends ParserRuleContext {
		public OuverContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ouver; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitOuver(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OuverContext ouver() throws RecognitionException {
		OuverContext _localctx = new OuverContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ouver);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumflotteurContext extends ParserRuleContext {
		public TerminalNode FLOTTEUR() { return getToken(GramaticaParser.FLOTTEUR, 0); }
		public TerminalNode ALLER() { return getToken(GramaticaParser.ALLER, 0); }
		public NumflotteurContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numflotteur; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) {
				try {
					return ((GramaticaVisitor<? extends T>)visitor).visitNumflotteur(this);
				} catch (Exception e) {
					throw new RuntimeException(e);
				}
			}
			else return visitor.visitChildren(this);
		}
	}

	public final NumflotteurContext numflotteur() throws RecognitionException {
		NumflotteurContext _localctx = new NumflotteurContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_numflotteur);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(FLOTTEUR);
			setState(45);
			match(ALLER);
			setState(46);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumentierContext extends ParserRuleContext {
		public TerminalNode ENTIER() { return getToken(GramaticaParser.ENTIER, 0); }
		public TerminalNode ALLER() { return getToken(GramaticaParser.ALLER, 0); }
		public NumentierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numentier; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) {
				try {
					return ((GramaticaVisitor<? extends T>)visitor).visitNumentier(this);
				} catch (Exception e) {
					throw new RuntimeException(e);
				}
			}
			else return visitor.visitChildren(this);
		}
	}

	public final NumentierContext numentier() throws RecognitionException {
		NumentierContext _localctx = new NumentierContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_numentier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(ENTIER);
			setState(49);
			match(ALLER);
			setState(50);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FermetContext extends ParserRuleContext {
		public FermetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fermet; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitFermet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FermetContext fermet() throws RecognitionException {
		FermetContext _localctx = new FermetContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_fermet);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TeteContext extends ParserRuleContext {
		public TerminalNode ANNULER() { return getToken(GramaticaParser.ANNULER, 0); }
		public TerminalNode PRINCIPALE() { return getToken(GramaticaParser.PRINCIPALE, 0); }
		public TeteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tete; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitTete(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TeteContext tete() throws RecognitionException {
		TeteContext _localctx = new TeteContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tete);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(ANNULER);
			setState(55);
			match(PRINCIPALE);
			setState(56);
			match(T__3);
			setState(57);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	 
		public DeclarationContext() { }
		public void copyFrom(DeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NumFlottContext extends DeclarationContext {
		public NumflotteurContext numflotteur() {
			return getRuleContext(NumflotteurContext.class,0);
		}
		public NumFlottContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitNumFlott(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NumEntContext extends DeclarationContext {
		public NumentierContext numentier() {
			return getRuleContext(NumentierContext.class,0);
		}
		public NumEntContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitNumEnt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declaration);
		try {
			setState(61);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FLOTTEUR:
				_localctx = new NumFlottContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(59);
				numflotteur();
				}
				break;
			case ENTIER:
				_localctx = new NumEntContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				numentier();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaContext extends ParserRuleContext {
		public DeclaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decla; }
	 
		public DeclaContext() { }
		public void copyFrom(DeclaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclaracionEntContext extends DeclaContext {
		public TerminalNode ENTIER() { return getToken(GramaticaParser.ENTIER, 0); }
		public TerminalNode ALLER() { return getToken(GramaticaParser.ALLER, 0); }
		public ExpressContext express() {
			return getRuleContext(ExpressContext.class,0);
		}
		public DeclaracionEntContext(DeclaContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) {
				try {
					return ((GramaticaVisitor<? extends T>)visitor).visitDeclaracionEnt(this);
				} catch (Exception e) {
					throw new RuntimeException(e);
				}
			}
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclaracionFlouContext extends DeclaContext {
		public TerminalNode FLOTTEUR() { return getToken(GramaticaParser.FLOTTEUR, 0); }
		public TerminalNode ALLER() { return getToken(GramaticaParser.ALLER, 0); }
		public ExpressContext express() {
			return getRuleContext(ExpressContext.class,0);
		}
		public DeclaracionFlouContext(DeclaContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) {
				try {
					return ((GramaticaVisitor<? extends T>)visitor).visitDeclaracionFlou(this);
				} catch (Exception e) {
					throw new RuntimeException(e);
				}
			}
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaContext decla() throws RecognitionException {
		DeclaContext _localctx = new DeclaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_decla);
		try {
			setState(75);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FLOTTEUR:
				_localctx = new DeclaracionFlouContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(63);
				match(FLOTTEUR);
				setState(64);
				match(ALLER);
				setState(65);
				match(T__5);
				setState(66);
				express(0);
				setState(67);
				match(T__1);
				}
				break;
			case ENTIER:
				_localctx = new DeclaracionEntContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(69);
				match(ENTIER);
				setState(70);
				match(ALLER);
				setState(71);
				match(T__5);
				setState(72);
				express(0);
				setState(73);
				match(T__1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignationContext extends ParserRuleContext {
		public AsignationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignation; }
	 
		public AsignationContext() { }
		public void copyFrom(AsignationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MissionContext extends AsignationContext {
		public TerminalNode ALLER() { return getToken(GramaticaParser.ALLER, 0); }
		public ExpressContext express() {
			return getRuleContext(ExpressContext.class,0);
		}
		public MissionContext(AsignationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) {
				try {
					return ((GramaticaVisitor<? extends T>)visitor).visitMission(this);
				} catch (Exception e) {
					throw new RuntimeException(e);
				}
			}
			else return visitor.visitChildren(this);
		}
	}

	public final AsignationContext asignation() throws RecognitionException {
		AsignationContext _localctx = new AsignationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_asignation);
		try {
			_localctx = new MissionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(77);
			match(ALLER);
			setState(78);
			match(T__5);
			setState(79);
			express(0);
			}
			setState(81);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImprimerContext extends ParserRuleContext {
		public ImprimerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imprimer; }
	 
		public ImprimerContext() { }
		public void copyFrom(ImprimerContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ImprContext extends ImprimerContext {
		public TerminalNode IMPRIMER() { return getToken(GramaticaParser.IMPRIMER, 0); }
		public ExpressContext express() {
			return getRuleContext(ExpressContext.class,0);
		}
		public TerminalNode STRING() { return getToken(GramaticaParser.STRING, 0); }
		public ImprContext(ImprimerContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitImpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImprimerContext imprimer() throws RecognitionException {
		ImprimerContext _localctx = new ImprimerContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_imprimer);
		try {
			_localctx = new ImprContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(IMPRIMER);
			setState(84);
			match(T__3);
			setState(87);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUM:
			case ALLER:
				{
				setState(85);
				express(0);
				}
				break;
			case STRING:
				{
				setState(86);
				match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(89);
			match(T__4);
			setState(90);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContenuContext extends ParserRuleContext {
		public List<ExpressContext> express() {
			return getRuleContexts(ExpressContext.class);
		}
		public ExpressContext express(int i) {
			return getRuleContext(ExpressContext.class,i);
		}
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<DeclaContext> decla() {
			return getRuleContexts(DeclaContext.class);
		}
		public DeclaContext decla(int i) {
			return getRuleContext(DeclaContext.class,i);
		}
		public List<AsignationContext> asignation() {
			return getRuleContexts(AsignationContext.class);
		}
		public AsignationContext asignation(int i) {
			return getRuleContext(AsignationContext.class,i);
		}
		public List<ImprimerContext> imprimer() {
			return getRuleContexts(ImprimerContext.class);
		}
		public ImprimerContext imprimer(int i) {
			return getRuleContext(ImprimerContext.class,i);
		}
		public List<ConditionalIfContext> conditionalIf() {
			return getRuleContexts(ConditionalIfContext.class);
		}
		public ConditionalIfContext conditionalIf(int i) {
			return getRuleContext(ConditionalIfContext.class,i);
		}
		public List<CondicionalforContext> condicionalfor() {
			return getRuleContexts(CondicionalforContext.class);
		}
		public CondicionalforContext condicionalfor(int i) {
			return getRuleContext(CondicionalforContext.class,i);
		}
		public List<IncrementoContext> incremento() {
			return getRuleContexts(IncrementoContext.class);
		}
		public IncrementoContext incremento(int i) {
			return getRuleContext(IncrementoContext.class,i);
		}
		public ContenuContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contenu; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitContenu(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContenuContext contenu() throws RecognitionException {
		ContenuContext _localctx = new ContenuContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_contenu);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << FOR) | (1L << FLOTTEUR) | (1L << ENTIER) | (1L << NUM) | (1L << IMPRIMER) | (1L << ALLER))) != 0)) {
				{
				setState(100);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(92);
					express(0);
					}
					break;
				case 2:
					{
					setState(93);
					declaration();
					}
					break;
				case 3:
					{
					setState(94);
					decla();
					}
					break;
				case 4:
					{
					setState(95);
					asignation();
					}
					break;
				case 5:
					{
					setState(96);
					imprimer();
					}
					break;
				case 6:
					{
					setState(97);
					conditionalIf();
					}
					break;
				case 7:
					{
					setState(98);
					condicionalfor();
					}
					break;
				case 8:
					{
					setState(99);
					incremento();
					}
					break;
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionalIfContext extends ParserRuleContext {
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public OuverContext ouver() {
			return getRuleContext(OuverContext.class,0);
		}
		public ContenuContext contenu() {
			return getRuleContext(ContenuContext.class,0);
		}
		public FermetContext fermet() {
			return getRuleContext(FermetContext.class,0);
		}
		public List<ConditionalelseifContext> conditionalelseif() {
			return getRuleContexts(ConditionalelseifContext.class);
		}
		public ConditionalelseifContext conditionalelseif(int i) {
			return getRuleContext(ConditionalelseifContext.class,i);
		}
		public ConditionalelseContext conditionalelse() {
			return getRuleContext(ConditionalelseContext.class,0);
		}
		public ConditionalIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionalIf; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitConditionalIf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionalIfContext conditionalIf() throws RecognitionException {
		ConditionalIfContext _localctx = new ConditionalIfContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_conditionalIf);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(T__6);
			setState(106);
			match(T__3);
			setState(107);
			condition(0);
			setState(108);
			match(T__4);
			setState(109);
			ouver();
			setState(110);
			contenu();
			setState(111);
			fermet();
			setState(115);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(112);
					conditionalelseif();
					}
					} 
				}
				setState(117);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__7) {
				{
				setState(118);
				conditionalelse();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionalelseContext extends ParserRuleContext {
		public OuverContext ouver() {
			return getRuleContext(OuverContext.class,0);
		}
		public ContenuContext contenu() {
			return getRuleContext(ContenuContext.class,0);
		}
		public FermetContext fermet() {
			return getRuleContext(FermetContext.class,0);
		}
		public ConditionalelseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionalelse; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitConditionalelse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionalelseContext conditionalelse() throws RecognitionException {
		ConditionalelseContext _localctx = new ConditionalelseContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_conditionalelse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(T__7);
			setState(122);
			ouver();
			setState(123);
			contenu();
			setState(124);
			fermet();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionalelseifContext extends ParserRuleContext {
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public OuverContext ouver() {
			return getRuleContext(OuverContext.class,0);
		}
		public ContenuContext contenu() {
			return getRuleContext(ContenuContext.class,0);
		}
		public FermetContext fermet() {
			return getRuleContext(FermetContext.class,0);
		}
		public ConditionalelseifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionalelseif; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitConditionalelseif(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionalelseifContext conditionalelseif() throws RecognitionException {
		ConditionalelseifContext _localctx = new ConditionalelseifContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_conditionalelseif);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(T__7);
			setState(127);
			match(T__6);
			setState(128);
			match(T__3);
			setState(129);
			condition(0);
			setState(130);
			match(T__4);
			setState(131);
			ouver();
			setState(132);
			contenu();
			setState(133);
			fermet();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
